--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react-native",
-    "lib": ["ES6"],
-    "module": "ES2015",
+    "lib": ["ESNext"],
+    "module": "CommonJS",
     "noEmitOnError": true,
     "outDir": "./lib",
     "sourceMap": true,
@@ -13,14 +13,10 @@
     "target": "ESNext",
     "allowJs": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
   },
-  "exclude": [
-    "**/__tests__/*", 
-    "node_modules",       
-    "babel.config.js",
-  ],
+  "exclude": ["**/__tests__/*"],
+  "include": ["src"],
   "paths": {
-    "react-native-awesome-modal": ["../lib"]
+    "react-native-awesome-modal": ["../src"]
   },
 }
