--- a/example/package.json
+++ b/example/package.json
@@ -13,8 +13,7 @@
     "@types/react": "^16.14.4",
     "@types/react-native": "^0.63.50",
     "react": "16.13.1",
-    "react-native": "0.63.4",
-    "react-native-safe-area": "^0.5.1"
+    "react-native": "0.63.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -24,7 +23,7 @@
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-native-awesome-modal": "github:aspect-apps/react-native-awesome-modal#add-animations-branch",
+    "react-native-awesome-modal": "https://github.com/aspect-apps/react-native-awesome-modal.git",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
