--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "!xcuserdata"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable",
+    "pre-commit": "lint-staged",
+    "postinstall": "husky install"
   },
   "repository": {
     "type": "git",
@@ -41,6 +45,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.0",
@@ -48,11 +54,16 @@
     "all-contributors-cli": "^6.20.0",
     "eslint": "^7.19.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "metro-react-native-babel-preset": "^0.65.0",
+    "pinst": "^2.1.6",
+    "prettier": "^2.3.0",
     "react": "^16.8.6",
     "react-native": "^0.60.0",
     "react-native-safe-area": "^0.5.1",
-    "typescript": "^4.1.3"
+    "semantic-release": "^17.4.3",
+    "typescript": "^4.3.2"
   },
   "peerDependencies": {
     "react": "^16.13.1",
